# aramenu

./: .gitignore  LICENSE  README.md  aramenu.py  pyproject.toml  setup.py
.github/workflows/: build.yml
